WIP: save progress on Admin-service